--- a/Praktikum-2/tugas_1.html
+++ b/Praktikum-2/tugas_1.html
@@ -2,7 +2,32 @@
 <html>
 <head>
 	<title>Tugas 1</title>
-	<link rel="stylesheet" type="text/css" href="css/tugas1.css">
+	<style type="text/css">
+		body {
+		background: url('https://www.freegreatpicture.com/files/photo99/49489-however-the-desktop-wallpaper-stand-clear-views.jpg');
+		background-size: cover;
+		background-attachment: fixed;
+		background-repeat: no-repeat;
+		}
+
+		.isi {
+			background-color: rgb(0,0,0);
+			background-color: rgb(0,0,0,0.2);
+			margin-top: 70px; width: 450px;
+			margin-left: 50px;
+
+			padding: 10px;
+		}
+
+		h1 {
+			font-family: cambria;
+		}
+
+		p {
+			font-family: garamond;
+			margin-top: -10px; 
+		}
+	</style>
 </head>
 <body> 
 	
