--- a/Praktikum-2/tugas_1_formHTML.html
+++ b/Praktikum-2/tugas_1_formHTML.html
@@ -44,7 +44,7 @@
             <input type="submit" name="submit">
         </p>
         <p>
-        	<nbsp><h3>Form Registrasi</h3>
+          <h3 style="padding-left: 70px">Form Registrasi</h3>
         </p>
     </form>
 </body>
