--- a/Praktikum-2/tugas_1_formHTML.html
+++ b/Praktikum-2/tugas_1_formHTML.html
@@ -31,16 +31,16 @@
        </p>
        <p>
             <label>Email: </label>
-            <input type="text">
+            <input type="email">
         </p>
         <p>
             <label>Photo: </label>
-            <input type="text" name="Photo">
+            <input type="text" name="Photo" placeholder="Masukkan file" readonly="Photo">
             <input type="file" name="upload" value="Browse" width="100" placeholder="Browse"/>
         </p>
         <p>
             <label>Comment: </label>
-            <textarea name="biografi"></textarea>
+            <textarea rows="5" cols="25" name="biografi"></textarea>
             <input type="submit" name="submit">
         </p>
         <p>
