--- a/Tugas_Personal_Web.html
+++ b/Tugas_Personal_Web.html
@@ -28,7 +28,7 @@
 		<p class="penjelasan" style="font-size: 15pt; font-family: garamond; text-align: center;">Mulai dari HTML, CSS, Javascript, serta PHP</p><br>
 		<a href="#" style="text-decoration: none; color: white;"><p class="kotak" style="font-size: 11pt; font-family: garamond;" align="center"><strong>DAFTAR SEKARANG! &nbsp;<i class="fas fa-arrow-right"></i></strong></p></a>
 	</div>
-	<div class="footer"><p align="center"> © Copyright 2019</p></b>
+	<div class="footer"><p align="center"> © Copyright 2019 MDFK 173</p></b>
 	</div>
 </div>
 </body>
